--- a/TravelLive/View/Chat/MessageCell.xib
+++ b/TravelLive/View/Chat/MessageCell.xib
@@ -17,12 +17,12 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Y89-fi-4fI">
-                        <rect key="frame" x="16" y="8" width="93" height="44"/>
+                        <rect key="frame" x="16" y="8" width="87" height="44"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.29999999999999999" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M0A-gr-QO2" customClass="EdgeInsetLabel" customModule="TravelLive" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="41.5" height="44"/>
+                                <rect key="frame" x="0.0" y="0.0" width="35.5" height="44"/>
                                 <color key="backgroundColor" red="0.94117647059999998" green="0.94117647059999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                                 <userDefinedRuntimeAttributes>
@@ -43,8 +43,8 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.29999999999999999" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YWv-eK-reY" customClass="EdgeInsetLabel" customModule="TravelLive" customModuleProvider="target">
-                                <rect key="frame" x="51.5" y="0.0" width="41.5" height="44"/>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.29999999999999999" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YWv-eK-reY" customClass="EdgeInsetLabel" customModule="TravelLive" customModuleProvider="target">
+                                <rect key="frame" x="45.5" y="0.0" width="41.5" height="44"/>
                                 <color key="backgroundColor" red="0.94117647059999998" green="0.94117647059999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -88,7 +88,7 @@
     </objects>
     <designables>
         <designable name="M0A-gr-QO2">
-            <size key="intrinsicContentSize" width="41.5" height="20.5"/>
+            <size key="intrinsicContentSize" width="35.5" height="17"/>
         </designable>
         <designable name="YWv-eK-reY">
             <size key="intrinsicContentSize" width="41.5" height="20.5"/>
