--- a/TravelLive/View/Event.storyboard
+++ b/TravelLive/View/Event.storyboard
@@ -24,26 +24,26 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="NW7-1w-WCv">
-                                    <size key="itemSize" width="250" height="350"/>
+                                    <size key="itemSize" width="0.0" height="0.0"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="EventCollectionCell" id="2SR-hL-NEZ" customClass="EventCollectionViewCell" customModule="TravelLive" customModuleProvider="target">
-                                        <rect key="frame" x="82" y="0.0" width="250" height="370"/>
+                                        <rect key="frame" x="82" y="0.0" width="250" height="500"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="0PT-1P-wcX">
-                                            <rect key="frame" x="0.0" y="0.0" width="250" height="370"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" id="0PT-1P-wcX">
+                                            <rect key="frame" x="0.0" y="0.0" width="250" height="500"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jD6-rG-07Z">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jD6-rG-07Z">
                                                     <rect key="frame" x="0.0" y="0.0" width="250" height="350"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="350" id="yEe-1e-OCV"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ys8-VC-DK3">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ys8-VC-DK3">
                                                     <rect key="frame" x="104" y="30" width="42" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="6G0-If-DGL"/>
@@ -52,7 +52,7 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="35g-qy-HHn">
+                                                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="35g-qy-HHn">
                                                     <rect key="frame" x="210" y="0.0" width="40" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="40" id="FLO-0o-Oxa"/>
@@ -65,10 +65,10 @@
                                                         <action selector="close:" destination="2SR-hL-NEZ" eventType="touchUpInside" id="CUi-Pw-KNE"/>
                                                     </connections>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CGn-hv-lfb">
-                                                    <rect key="frame" x="104.5" y="375" width="41.5" height="20.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CGn-hv-lfb">
+                                                    <rect key="frame" x="0.0" y="375" width="250" height="115"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="300" id="4ze-e7-3pP"/>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="115" id="b5r-gz-aeW"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" systemColor="systemRedColor"/>
@@ -77,15 +77,17 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="35g-qy-HHn" secondAttribute="trailing" id="194-bB-oOZ"/>
-                                                <constraint firstAttribute="bottom" secondItem="jD6-rG-07Z" secondAttribute="bottom" constant="20" id="4li-sn-6Bo"/>
                                                 <constraint firstItem="35g-qy-HHn" firstAttribute="top" secondItem="0PT-1P-wcX" secondAttribute="top" id="7tl-Rj-KfY"/>
                                                 <constraint firstItem="ys8-VC-DK3" firstAttribute="centerX" secondItem="jD6-rG-07Z" secondAttribute="centerX" id="9wD-I0-8NV"/>
                                                 <constraint firstItem="CGn-hv-lfb" firstAttribute="centerX" secondItem="0PT-1P-wcX" secondAttribute="centerX" id="Eia-zo-gDt"/>
+                                                <constraint firstAttribute="trailing" secondItem="CGn-hv-lfb" secondAttribute="trailing" id="Lm8-ON-Acy"/>
                                                 <constraint firstItem="jD6-rG-07Z" firstAttribute="leading" secondItem="0PT-1P-wcX" secondAttribute="leading" id="RVn-uz-SHg"/>
                                                 <constraint firstItem="jD6-rG-07Z" firstAttribute="top" secondItem="0PT-1P-wcX" secondAttribute="top" id="YwL-61-TcA"/>
+                                                <constraint firstItem="CGn-hv-lfb" firstAttribute="leading" secondItem="0PT-1P-wcX" secondAttribute="leading" id="bSh-sF-1u9"/>
                                                 <constraint firstItem="CGn-hv-lfb" firstAttribute="top" secondItem="jD6-rG-07Z" secondAttribute="bottom" constant="25" id="dwd-32-oKn"/>
                                                 <constraint firstAttribute="trailing" secondItem="jD6-rG-07Z" secondAttribute="trailing" id="fMF-Xq-2rR"/>
                                                 <constraint firstItem="ys8-VC-DK3" firstAttribute="top" secondItem="0PT-1P-wcX" secondAttribute="top" constant="30" id="kVb-6C-slK"/>
+                                                <constraint firstAttribute="bottom" secondItem="CGn-hv-lfb" secondAttribute="bottom" constant="10" id="pWF-WD-w4S"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <userDefinedRuntimeAttributes>
