--- a/TravelLive/View/Chat.storyboard
+++ b/TravelLive/View/Chat.storyboard
@@ -35,7 +35,7 @@
                                     <constraint firstAttribute="width" constant="40" id="UPd-CT-eTt"/>
                                     <constraint firstAttribute="height" constant="30" id="xBn-7w-RxF"/>
                                 </constraints>
-                                <color key="tintColor" systemColor="linkColor"/>
+                                <color key="tintColor" systemColor="systemRedColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="location.fill" catalog="system"/>
                                 <connections>
@@ -96,13 +96,16 @@
             <point key="canvasLocation" x="137.68115942028987" y="55.580357142857139"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="Ufc-MG-wuk"/>
+    </designables>
     <resources>
         <image name="location.fill" catalog="system" width="128" height="121"/>
-        <systemColor name="linkColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
